# livlang

./: .gitignore  CMakeLists.txt  README.md  build.sh
examples/: bubble_sort.liv  test.liv
src/: ast_node.c  ast_node.cpp  ast_node.h  defines.h  enviroinment.cpp  enviroinment.h  environment.c  environment.h  eval.c  eval.cpp  eval.h  eval_value.h  file_io.c  file_io.h  interpreter_value.h  lexer.c  lexer.cpp  lexer.h  logger.c  logger.cpp  logger.h  main.c  main.cpp  parser.c  parser.cpp  parser.h  token.c  token.cpp  token.h  utils.cpp  utils.h  vector.c  vector.h  vlad_value.h
